--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
 		"@babel/plugin-proposal-class-properties",
 		"@babel/plugin-transform-runtime"
 	],
+	"compact": false,
 	"env": {
 		"test": {
 			"plugins": [
