--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
 NODE_ENV=development
+PORT=5000
 COORDINATORS_DATABASE_URL=db_url
 COORDINATORS_TEST_DATABASE_URL=db_url_for_tests
 JWT_SECRET=your_secret_key
+ADMIN_PASSWORD=some-password
